tests/fail/include_missing.werk
include "does-not-exist.werk"
